--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LogInActivity" />
-        <activity android:name=".UserArea"></activity>
+        <activity android:name=".UserArea" />
+        <activity android:name=".NewSocialActivity"></activity>
     </application>
 
 </manifest>
